# adapters/target-ems-scada-http/src/routing.rs
@@ -193,6 +193,10 @@ pub(crate) fn integration_router(state: IntegrationState) -> Router {
             "/bridge/v1/schemas/v1.15/{schema}",
             get(crate::openapi::schema_v1_15),
         )
+        .route(
+            "/bridge/v1/schemas/v1.16/{schema}",
+            get(crate::openapi::schema_v1_16),
+        )
         .route("/bridge/v1/events", get(crate::events::events))
         .route("/bridge/v1/stations", get(stations::stations))
         .route("/bridge/v1/stations/{station_id}", get(stations::station))
